// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentGroups handles a sub-dependency correctly 1`] = `
Array [
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "App",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {},
        "name": "App",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "path": "/src/app.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/src/index.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/utopia/storyboard.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "div",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "backgroundColor": "#aaaaaa33",
                  "position": "absolute",
                },
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "div",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "span",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "span",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "h1",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "h1",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "h2",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "h2",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "p",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "p",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "button",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "input",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "input",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "video",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "height": "120px",
                  "position": "absolute",
                  "width": "250px",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "controls",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "autoPlay",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "loop",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "src",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "https://dl8.webmfiles.org/big-buck-bunny_trailer.webm",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "video",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "img",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "height": "64px",
                  "position": "absolute",
                  "width": "64px",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "src",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "/editor/icons/favicons/favicon-128.png?hash=nocommit",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "img",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "condition": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": true,
          },
          "originalConditionString": "true",
          "type": "JSX_CONDITIONAL_EXPRESSION",
          "whenFalse": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": null,
          },
          "whenTrue": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": null,
          },
        },
        "importsToAdd": Object {},
        "name": "Conditional",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "CONDITIONALS_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "longForm": false,
          "type": "JSX_FRAGMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Fragment",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "FRAGMENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [
            Object {
              "text": "Sample text",
              "type": "JSX_TEXT_BLOCK",
              "uid": "",
            },
          ],
          "name": Object {
            "baseVariable": "span",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {},
        "name": "Sample text",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "SAMPLES_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "dependencyName": "@heroicons/react",
      "dependencyStatus": "loaded",
      "type": "PROJECT_DEPENDENCY_GROUP",
    },
  },
]
`;

exports[`getComponentGroups returns all the various default groups 1`] = `
Array [
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "App",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {},
        "name": "App",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "path": "/src/app.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/src/index.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/utopia/storyboard.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "div",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "backgroundColor": "#aaaaaa33",
                  "position": "absolute",
                },
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "div",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "span",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "span",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "h1",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "h1",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "h2",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "h2",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "p",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "p",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "button",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "input",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "input",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "video",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "height": "120px",
                  "position": "absolute",
                  "width": "250px",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "controls",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "autoPlay",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "loop",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "src",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "https://dl8.webmfiles.org/big-buck-bunny_trailer.webm",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "video",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "img",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "height": "64px",
                  "position": "absolute",
                  "width": "64px",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "src",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "/editor/icons/favicons/favicon-128.png?hash=nocommit",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "img",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "condition": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": true,
          },
          "originalConditionString": "true",
          "type": "JSX_CONDITIONAL_EXPRESSION",
          "whenFalse": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": null,
          },
          "whenTrue": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": null,
          },
        },
        "importsToAdd": Object {},
        "name": "Conditional",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "CONDITIONALS_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "longForm": false,
          "type": "JSX_FRAGMENT",
        },
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Fragment",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "FRAGMENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [
            Object {
              "text": "Sample text",
              "type": "JSX_TEXT_BLOCK",
              "uid": "",
            },
          ],
          "name": Object {
            "baseVariable": "span",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {},
        "name": "Sample text",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "SAMPLES_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "DatePicker",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "DatePicker",
                "name": "DatePicker",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "DatePicker",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Button",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "disabled",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "type",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "default",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "shape",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "default",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "ghost",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "block",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "danger",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "loading",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "target",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "button",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Button",
                "name": "Button",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "InputNumber",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "InputNumber",
                "name": "InputNumber",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "InputNumber",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Row",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "align",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "top",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "gutter",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "justify",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "center",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Row",
                "name": "Row",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Row",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Col",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "flex",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 1,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "offset",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "order",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "pull",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "push",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "xs",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "sm",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "md",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "lg",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "xl",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "xxl",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Col",
                "name": "Col",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Col",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Space",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "align",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "center",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "direction",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "vertical",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "size",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "middle",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Space",
                "name": "Space",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Space",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Menu",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "forceSubMenuRender",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "inlineCollapsed",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "inlineIndent",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 24,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "mode",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "inline",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "multiple",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "selectable",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": true,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "subMenuCloseDelay",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0.1,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "subMenuOpenDelay",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": 0,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "theme",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "light",
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Menu",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Menu",
            "propertyPath": Object {
              "propertyElements": Array [
                "Item",
              ],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "disabled",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "danger",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Menu.Item",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Menu",
            "propertyPath": Object {
              "propertyElements": Array [
                "SubMenu",
              ],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "disabled",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Menu.SubMenu",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Menu",
            "propertyPath": Object {
              "propertyElements": Array [
                "ItemGroup",
              ],
            },
          },
          "props": Array [],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Menu.ItemGroup",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Typography",
            "propertyPath": Object {
              "propertyElements": Array [
                "Text",
              ],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "code",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "copyable",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "delete",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "disabled",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "editable",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "ellipsis",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "mark",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "keyboard",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "underline",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "strong",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": false,
              },
            },
          ],
          "type": "JSX_ELEMENT",
        },
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Typography",
                "name": "Typography",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "name": "Typography.Text",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "dependencyName": "antd",
      "dependencyStatus": "loaded",
      "type": "PROJECT_DEPENDENCY_GROUP",
    },
  },
]
`;
